Retake quiz an dback button fix

--- a/components/footer.html
+++ b/components/footer.html
@@ -5,11 +5,11 @@
             <nav class="footer-site-nav" aria-labelledby="block-farmers-update-mainnavigation-2-menu" id="block-farmers-update-mainnavigation-2">
                 <h2 class="usa-sr-only" id="block-farmers-update-mainnavigation-2-menu">Main navigation - Footer</h2>
                 <ul>
-                    <li><a href="/" id="home" onclick="setContent('home');return false;" aria-label="Go to Home Page" class="page-link" aria-label="Go to Home Page"><span>Home</span></a></li>
-                    <li><a href="/" id="guides" onclick="setContent('guides');return false;" class="page-link" data-label="/" aria-label="Go to Guides Page" data-category="Guides">Guides</a></li>
-                    <li><a href="/" id="eligibility" onclick="setContent('eligibility');return false;" class="page-link" data-label="/" aria-label="Go to the Loan Readiness Tool" data-category="Readiness">Eligibility Self-Assessment</a></li>
-                    <li><a href="/" id="discovery" onclick="setContent('discovery');return false;" class="page-link" data-label="/" aria-label="Go to the Loan Discovery Tool" data-category="Readiness">Loan Discovery</a></li>
-                    <li><a href="/" id="support" onclick="setContent('support');return false;" class="page-link" data-label="/" aria-label="Go to Form Support Page" data-category="Loans">Form Support</a></li>
+                    <li><a href="/" id="home" onclick="setContent('home');return false;" class="page-link" aria-label="Go to Home Page"><span>Home</span></a></li>
+                    <li><a href="/" id="quiz" onclick="setContent('quiz');return false;" class="page-link" aria-label="Go to Farm Loan Quiz" data-category="Readiness">Farm Loan Quiz</a></li>
+                    <li><a href="/" id="explore" onclick="setContent('explore');return false;" class="page-link" aria-label="Explore Loans" data-category="Loans">Explore Loans</a></li>
+                    <li><a href="/" id="loanforms" onclick="setContent('loanforms');return false;" class="page-link" aria-label="Go to the Loan Forms" data-category="Loans">Loan Forms</a></li>
+                    <li><a href="/" id="guides" onclick="setContent('guides');return false;" class="page-link" aria-label="Go to About FSA Farm Loans Page" data-category="Guides">About FSA Farm Loans</a></li>
                 </ul>
             </nav>
             </div>
